# Libft

./: CMakeLists.txt  Makefile  README.md  ft_itoa.c  ft_memchr.c  ft_strequ.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strsplit.c  ft_strsub.c  libft.h  main.c
adjlist/: adjlist1.c  adjlist2.c
deck/: deck1.c  deck2.c
dictionary/: dictionary.c
functionality/: ft_abs.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_power.c  ft_swap.c  ft_tolower.c  ft_toupper.c  ft_wordcount.c  ft_wordcountfix.c  functionality.h
getline/: get_next_line.h  gnl_strnew.c
hash/: ft_sha256.c  ft_swap_end.c  hash.h
include/: libft.h
include/libft/: adjlist.h  dequeue.h  dictionary.h  linklist.h  memory.h  printer.h  printf.h  stack.h  strlib.h  util.h
linklistlib/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstmap.c
memory/: ft_bzero.c  ft_memccpy.c  ft_memchr.c  ft_memdel.c
printf/: complete_flags.c  extralib2.c  ft_printf.c  number_in_string.c  parsing_identifier.c
printlib/: ft_putchar.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c
queue/: queue.h  queue2.c
src/: adjlist.c  deque.c
src/getline/: get_next_line.c  join_dup_gnl.c
src/hash/: ft_md5.c
src/linklistlib/: ft_lstiter.c  ft_lstnew.c
src/memory/: ft_memalloc.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c
src/printf/: extralib1.c  printing.c
strlib/: ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strrchr.c
(+22 files in other folders)
